roles/glpi/files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi-app
  namespace: glpi
  labels:
    app.kubernetes.io/instance: glpi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: glpi-app
  template:
    metadata:
      labels:
        app: glpi-app
        app.kubernetes.io/instance: glpi
    spec:
      containers:
        - name: glpi-container
          image: glpi/glpi:latest
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: glpi-storage
              mountPath: /var/glpi
      volumes:
        - name: glpi-storage
          persistentVolumeClaim:
            claimName: glpi-data-pvc
        - name: db-config-source
          configMap:
            name: glpi-db-config
